# vega-navigation-stack

./: .gitignore  .gitmodules  README.md  dds_setup.sh  start_ptp_clock.sh  system_real_robot.sh  system_real_robot_localization.sh  system_real_robot_omni.sh  system_real_robot_rs_airy_with_route_planner.sh  system_real_robot_waypoint_seq.sh  system_real_robot_with_route_planner.sh
docker/: .dockerignore  Dockerfile.amd64  Dockerfile.arm64  README.md  docker-compose.yml  entrypoint.sh  setup_host.sh
src/base_autonomy/autonomy_msgs/: CMakeLists.txt  package.xml
src/base_autonomy/autonomy_msgs/msg/: GoalStatus.msg  NavigateCmd.msg
src/base_autonomy/local_planner/: CMakeLists.txt  package.xml
src/base_autonomy/local_planner/config/: standard_3d.yaml  standard_3d_omni.yaml
src/base_autonomy/local_planner/launch/: local_planner.launch
src/base_autonomy/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/base_autonomy/slam_interface/: CMakeLists.txt  README.md  package.xml
src/base_autonomy/slam_interface/config/: body_filter_default.yaml
src/base_autonomy/slam_interface/config/calibration/: transform_airy_v1p.yaml  transform_airy_v1p_omni.yaml  transform_default.yaml  transform_mid360_y30.yaml
src/base_autonomy/slam_interface/launch/: slam_interface.launch.py
src/base_autonomy/slam_interface/src/: slam_interface.cpp
src/base_autonomy/terrain_analysis/: CMakeLists.txt  package.xml
src/base_autonomy/terrain_analysis/launch/: terrain_analysis.launch
src/base_autonomy/terrain_analysis/src/: terrainAnalysis.cpp
src/base_autonomy/terrain_analysis_ext/: CMakeLists.txt  package.xml
src/base_autonomy/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
src/base_autonomy/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/base_autonomy/vehicle_simulator/: package.xml
src/base_autonomy/vehicle_simulator/launch/: start_rviz2_real_robot.launch.py  system_real_robot_base.launch.py  system_real_robot_rs_airy.launch.py  system_real_robot_rs_airy_localization.launch.py  system_real_robot_rs_airy_omni.launch.py  system_real_robot_rs_airy_with_route_planner.launch.py
src/base_autonomy/vehicle_simulator/rviz/: vehicle_simulator_2d.rviz  vehicle_simulator_3d.rviz  vehicle_simulator_wp_3d.rviz
src/base_autonomy/vehicle_simulator/src/: vehicleSimulator.cpp
src/base_autonomy/visualization_tools/src/: visualizationTools.cpp
src/route_planner/boundary_handler/src/: graph_extractor.cpp
src/route_planner/far_planner/: CMakeLists.txt  package.xml
src/route_planner/far_planner/config/: indoor.yaml
src/route_planner/far_planner/launch/: far_planner.launch
src/route_planner/far_planner/rviz/: default.rviz
src/route_planner/far_planner/src/: far_planner.cpp
src/route_planner/graph_decoder/: CMakeLists.txt
src/utilities/goalpoint_rviz_plugin/: CMakeLists.txt  package.xml
src/utilities/goalpoint_rviz_plugin/include/: goalpoint_tool.hpp
src/utilities/goalpoint_rviz_plugin/src/: goalpoint_tool.cpp
src/utilities/joy_command_mapper/: CMakeLists.txt  package.xml
src/utilities/joy_command_mapper/config/: 8bitdo.yaml  ps3.yaml
src/utilities/joy_command_mapper/launch/: joy_command_mapper.launch
src/utilities/joy_command_mapper/msg/: RobotCommand.msg
src/utilities/joy_command_mapper/src/: joy_command_mapper.cpp
src/utilities/livox_ros_driver2/config/: MID360_config.json
src/utilities/local_planner_status_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/utilities/local_planner_status_rviz_plugin/include/: local_planner_status_panel.hpp
src/utilities/local_planner_status_rviz_plugin/src/: local_planner_status_panel.cpp
src/utilities/navcmd_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/utilities/navcmd_rviz_plugin/include/: navcmd_tool.hpp
src/utilities/navcmd_rviz_plugin/src/: navcmd_tool.cpp
src/utilities/rslidar_sdk/config/: config.yaml  config_multiple.yaml
src/utilities/rslidar_sdk/launch/: start_multiple.py
src/utilities/rslidar_sdk/rviz/: rviz2.rviz
src/utilities/teleop_rviz_plugin/: CMakeLists.txt  package.xml
src/utilities/teleop_rviz_plugin/src/: teleop_panel.cpp  teleop_panel.h
src/utilities/teleop_rviz_plugin_plus/: CMakeLists.txt  package.xml
src/utilities/teleop_rviz_plugin_plus/src/: teleop_panel.cpp  teleop_panel.h
src/utilities/waypoint_rviz_plugin/: CMakeLists.txt  package.xml
src/utilities/waypoint_rviz_plugin/include/: waypoint_tool.hpp
src/utilities/waypoint_rviz_plugin/src/: waypoint_tool.cpp
src/utilities/waypoint_sequence_manager/: README.md  package.xml  setup.cfg  setup.py
src/utilities/waypoint_sequence_manager/launch/: waypoint_sequence_manager.launch.py
src/utilities/waypoint_sequence_manager/waypoint_sequence_manager/: example_client.py  waypoint_sequence_manager.py
src/utilities/waypoint_sequence_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
system_cfgs/: cyclone_dds_setup.xml
system_cfgs/ptp_clock/: automotive-master.cfg
(+4 files in other folders)
